8171855: Move package name transformations during module bootstrap into native code

Reviewed-by: alanb, acorn, lfoltan, mchung, plevart, hseigel, sspitsyn